<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".BeerViewActivity" >

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblBeerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtBeerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblBeerColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_color_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtBeerColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblBeerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/beer_type_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtBeerType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calories_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtCalories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

    <TableRow android:layout_marginTop="20dp">

        <TextView
            android:id="@+id/lblAlcohol_Percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alcohol_percentage_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/txtAlcohol_Percentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </TableRow>

</TableLayout>